# frigg

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/br/frigg/: FilePicker.android.kt  MainActivity.kt  Platform.android.kt
composeApp/src/commonMain/kotlin/com/br/frigg/: App.kt  FilePicker.kt  Greeting.kt  Platform.kt
composeApp/src/commonTest/kotlin/com/br/frigg/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/com/br/frigg/: FilePicker.ios.kt  MainViewController.kt  Platform.ios.kt
frigg/: build-ios-lame.sh  build.gradle.kts  download-lame.sh
frigg-logging/: build.gradle.kts
frigg-logging/src/androidDeviceTest/kotlin/com/br/frigg/logging/: ExampleInstrumentedTest.kt
frigg-logging/src/androidHostTest/kotlin/com/br/frigg/logging/: ExampleUnitTest.kt
frigg-logging/src/androidMain/kotlin/com/br/frigg/logging/: Logger.android.kt  Platform.android.kt
frigg-logging/src/commonMain/kotlin/com/br/frigg/logging/: Logger.kt  Platform.kt
frigg-logging/src/iosMain/kotlin/com/br/frigg/logging/: Logger.ios.kt  Platform.ios.kt
frigg/src/androidDeviceTest/kotlin/com/br/frigg/: ExampleInstrumentedTest.kt
frigg/src/androidHostTest/kotlin/com/br/frigg/: ExampleUnitTest.kt
frigg/src/androidHostTest/kotlin/com/br/lame/utils/: ExampleUnitTest.kt
frigg/src/androidMain/cpp/: lame_jni.cpp
frigg/src/androidMain/kotlin/com/br/frigg/: FriggConverter.android.kt  LameConverter.android.kt
frigg/src/androidMain/kotlin/com/br/lame/utils/: LameConverter.android.kt  Platform.android.kt
frigg/src/commonMain/kotlin/com/br/frigg/: FriggConverter.kt  FriggException.kt  LameConverter.kt
frigg/src/commonMain/kotlin/com/br/lame/utils/: LameConverter.kt  Platform.kt
frigg/src/iosMain/cinterop/: lame.def
frigg/src/iosMain/kotlin/com/br/frigg/: FriggConverter.ios.kt  LameConverter.ios.kt
frigg/src/native/: CMakeLists.txt
frigg/src/native/wrapper/: wav_to_mp3.c  wav_to_mp3.h
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
lame-utils/: README.md  build-ios-lame.sh  build-native-android.sh  build.gradle.kts  download-lame.sh
lame-utils/src/androidDeviceTest/kotlin/com/br/lame/utils/: ExampleInstrumentedTest.kt
lame-utils/src/androidMain/cpp/: lame_jni.cpp
lame-utils/src/androidMain/kotlin/com/br/lame/utils/: LameConverter.android.kt
lame-utils/src/commonMain/kotlin/com/br/lame/utils/: LameConverter.kt
lame-utils/src/iosMain/cinterop/: lame.def
lame-utils/src/iosMain/kotlin/com/br/lame/utils/: LameConverter.ios.kt  Platform.ios.kt
lame-utils/src/native/: CMakeLists.txt
lame-utils/src/native/wrapper/: wav_to_mp3.c  wav_to_mp3.h
